testsuite/tests/typecheck/should_fail/T14325.stderr

T14325.hs:11:9: error:
    • Could not deduce (C b (f b)) arising from a use of ‘foo’
      from the context: C (f b) b
        bound by the type signature for:
                   hm3 :: forall (f :: * -> *) b. C (f b) b => b -> f b
        at T14325.hs:10:1-28
    • In the expression: foo x
      In an equation for ‘hm3’: hm3 x = foo x
